--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
             margin: 0;
             padding: 0;
             background-color: #3498db;
-            font-family: 'Roboto', sans-serif;
-            font-weight: 50;
+            /* font-family: 'Roboto', sans-serif;
+            font-weight: 50; */
         }
+       
 
         .nav {
             background: #000;
@@ -118,13 +119,13 @@
                 margin: 0;
                 padding: 0;
                 background-color: whitesmoke;
-                font-family: 'Roboto', sans-serif;
-                font-weight: 50;
+                /* font-family: 'Roboto', sans-serif;
+                font-weight: 50; */
             }
-
+            
             .button--moema {
                 color: white;
-                margin-left: 82px;
+                margin-left: 100px;
                 margin-top: 10px;
             }
 
@@ -139,21 +140,21 @@
                 justify-content: center;
             }
             #price {
-                margin-left: 60px;
+                margin-left: 80px;
                 box-shadow: 0px 2px 5px 5px #88888847;
                 border:none;
                 width: 210px;
             }
 
             #discount {
-                margin-left: 60px;
+                margin-left: 80px;
                 box-shadow: 0px 2px 5px 5px #88888847;
                 border:none;
                 width: 210px;
             }
 
             #sharePrice {
-                margin-left: 60px;
+                margin-left: 80px;
                 box-shadow: 0px 2px 5px 5px #88888847;
                 border:none;
                 width: 210px;
@@ -161,14 +162,14 @@
             }
 
             #noOfShares {
-                margin-left: 60px;
+                margin-left: 80px;
                 box-shadow: 0px 2px 5px 5px #88888847;
                 border:none;
                 width: 210px;
             }
 
             #total {
-                margin-left: 24px;
+                margin-left: 50px;
                 box-shadow: 0px 2px 5px 5px #88888847;
                 border:none;
                 width: 278px;
@@ -177,7 +178,7 @@
             }
 
             #loss {
-                margin-left: 24px;
+                margin-left: 50px;
                 box-shadow: 0px 2px 5px 5px #88888847;
                 border:none;
                 width: 278px;
@@ -185,7 +186,7 @@
                 background-color: rgb(253, 141, 121);
             }
             #Exit {
-                margin-left: 24px;
+                margin-left: 50px;
                 box-shadow: 0px 2px 5px 5px #88888847;
                 border:none;
                 width: 278px;
@@ -194,7 +195,7 @@
             }
 
             #stopLoss {
-                margin-left: 24px;
+                margin-left: 50px;
                 box-shadow: 0px 2px 5px 5px #88888847;
                 width: 278px;
                 margin-top: 10px;
@@ -203,7 +204,7 @@
             }
 
             label {
-                margin-left: 85px;
+                margin-left: 120px;
                 color: #2b1e1ecf;
                 font-size: large;
                 font-weight: 700;
@@ -295,8 +296,7 @@
         <br>
         <label for="Exit" class="bExit">Book your Profit for:</label>
         <input readonly id="Exit" placeholder="Rupees">
-        <hr>
-
+<hr>
     </div>
 </body>
 </html>
