--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             font-weight: 50; */
         }
 
-
+        button {
+            cursor: pointer;
+        }
         .nav {
             background: #000;
             height: 60px;
